@@ -9,7 +9,6 @@ import com.team1.hrbank.repository.DepartmentRepository;
 import com.team1.hrbank.repository.EmployeeRepository;
 import com.team1.hrbank.service.DepartmentService;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -20,13 +19,13 @@ import org.springframework.transaction.annotation.Transactional;
 public class DepartmentServiceImpl implements DepartmentService {
 
   private final DepartmentRepository departmentRepository;
-  // private final EmployeeRepository employeeRepository;
+  private final EmployeeRepository employeeRepository;
 
   @Override
   @Transactional
   public DepartmentDto createDepartment(DepartmentCreateRequest request) {
     if (departmentRepository.existsByName(request.name())) {
-      throw new IllegalArgumentException("이미 존재하는 부서 이름입니다.");
+      throw new IllegalArgumentException("이미 존재하는 부서 이름이에요");
     }
 
     Department department = Department.of(
@@ -47,7 +46,7 @@ public class DepartmentServiceImpl implements DepartmentService {
     if (request.newName() != null
         && !request.newName().equals(department.getName())) {
       if (departmentRepository.existsByName(request.newName())) {
-        throw new IllegalArgumentException("이미 존재하는 부서 이름입니다.");
+        throw new IllegalArgumentException("이미 존재하는 부서 이름이에요");
       }
     }
 
@@ -57,26 +56,43 @@ public class DepartmentServiceImpl implements DepartmentService {
         request.newEstablishedDate()
     );
 
-    return toDto(department, 0L); //EmployeeRepository 작업되면 수정
+    long employeeCount = employeeRepository.countByDepartmentId(department.getId());
+    return toDto(department, employeeCount);
   }
 
   @Override
   public DepartmentDto findDepartment(Long id) {
     Department department = getDepartmentOrThrow(id);
-    return toDto(department, 0L);
+    long employeeCount = employeeRepository.countByDepartmentId(id);
+    return toDto(department, employeeCount);
   }
 
   @Override
-  public List<DepartmentDto> findAllDepartments() {
-    List<Department> departments = departmentRepository.findAll();
+  public List<DepartmentDto> findAllDepartments(String keyword) {
+    List<Department> departments;
+
+    if (keyword == null || keyword.trim().isEmpty()) {
+      departments = departmentRepository.findAll();
+    }  else {
+      departments = departmentRepository.findByNameContainingIgnoreCaseOrDescriptionContainingIgnoreCase(keyword, keyword);
+    }
 
     return departments.stream()
-        .map(dept -> toDto(dept, 0L)) //EmployeeRepository 작업되면 수정
-        .collect(Collectors.toList());
+        .map(dept -> {
+          long employeeCount = employeeRepository.countByDepartmentId(dept.getId());
+          return toDto(dept, employeeCount);
+        })
+        .toList();
   }
 
+  @Override
+  @Transactional
   public void deleteDepartment(Long id) {
     Department department = getDepartmentOrThrow(id);
+
+    if (employeeRepository.existsByDepartmentId(id)) {
+      throw new IllegalArgumentException("소속 직원이 있는 부서는 삭제할 수 없습니다.");
+    }
 
     departmentRepository.delete(department);
   }
